Fix : Menghilangkan whitespace di sisi kanan halaman.

--- a/src/input.css
+++ b/src/input.css
@@ -45,6 +45,18 @@
     @apply hover:text-orange-500 transition-all duration-300
 }
 
+.responsive-svg {
+    width: 400px;
+    height: 400px;
+}
+
+@media screen and (max-width: 425px) {
+    .responsive-svg {
+        width: 300px;
+        height: 300px;
+    }
+}
+
 .linear-gradient {
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(12, 74, 110));
     width: 100%;
